# tinkherhack

./: README.md  check.py  check2.py  fix_bio.py  render.yaml  write_frontend.py
skillsync-backend/: .env  .env.example  .gitignore  README.md  ai.py  auth.py  distance.py  main.py  models.py  pyproject.toml  requirements.txt  seed_workers.py  skillsync.db  trust_score.py
skillsync-backend/routers/: auth_router.py  calls.py  customers.py  emergency.py  ivr.py  jobs.py  reviews.py  workers.py
skillsync-backend/src/: config.py  database.py  main.py
skillsync-backend/src/models/: match.py  skill.py  user.py
skillsync-backend/src/repositories/: match_repository.py  skill_repository.py  user_repository.py
skillsync-backend/src/routers/: ai.py  ai_call.py  auth_router.py  calls.py  customers.py  emergency.py  ivr.py  jobs.py  matches.py  requirements.txt  reviews.py  skills.py  users.py  workers.py
skillsync-backend/src/schemas/: __init__.py  match.py  skill.py  user.py
skillsync-backend/src/services/: gemini_service.py  match_service.py  skill_service.py  user_service.py
skillsync-backend/src/utils/: auth.py  helpers.py
skillsync-backend/tests/: distance.py  test_gemini.py  test_matches.py  test_skills.py  test_users.py
skillsync-frontend/: index.html  package-lock.json  package.json  tailwind.config.js  vite.config.js
skillsync-frontend/src/: App.jsx  main.jsx
skillsync-frontend/src/components/: LoadingSpinner.jsx  Navbar.jsx  TrustBadge.jsx  WorkerCard.jsx
skillsync-frontend/src/context/: AuthContext.jsx
skillsync-frontend/src/pages/: AICallPage.jsx  (+8 more)
(+1 files in other folders)
